Doctrine et entités

--- a/templates/projets/index.html.twig
+++ b/templates/projets/index.html.twig
@@ -3,25 +3,28 @@
 {% block title %}Projets{% endblock %}
 
 {% block body %}
+
 <div class="container text-center">
     <h1 class="my-5 text-center">Mes Projets</h1>
     <div class="row">
-        <div class="col-md-4 mt-4">
+        {% for project in projects %}
+            <div class="col-md-4 mt-4">
             <div class="card profile-card-5">
                 <div class="card-img-block">
-                    <img class="card-img-top" src="https://mobile-img.lpcdn.ca/lpca/924x/r3996/442dba2ec46933fd8a3f10cbe5575e53.jpeg" alt="node">
+                    <img class="card-img-top" src="{{ project.image }}" alt="{{ project.title }}">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Titre du projet</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ducimus porro optio, consectetur recusandae fugit dolores eligendi quibusdam debitis reiciendis minus autem asperiores fugiat, voluptate excepturi, assumenda quo quos nulla.
-                    Debitis quasi nostrum, dolorem possimus amet</p>
+                    <h5 class="card-title">{{ project.title }}</h5>
+                    <p class="card-text">{{ project.introduction }}</p>
                     <div class="projects-links d-flex justify-content-between">
-                        <a href="#" target="_blank" class="btn btn-outline-dark"><i class="fab fa-github"></i> GitHub</a>
-                        <a href="#" target="_blank" class="btn btn-outline-info"><i class="fas fa-info-circle"></i> En savoir plus</a>
+                        <a href="{{ project.github }}" target="_blank" class="btn btn-outline-dark"><i class="fab fa-github"></i> GitHub</a>
+                        <a href="{{ path('projects_show', {'id': project.id}) }}" class="btn btn-outline-info"><i class="fas fa-info-circle"></i> En savoir plus</a>
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
+
 {% endblock %}
