--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="container-fluid text-center" style="
+        background: linear-gradient(45deg, rgba(0,0,0,0.3)50%, rgba(0,0,0,0.3)50%), url(/images/quimper.jpg);
+        background-size: cover;
+        background-position: center;
+        height: 400px;
+        padding: 40px 0;">
+        <div class="jumbotron d-flex flex-column align-items-center" style="color: #fff;">
+            <h1>Yannick Biheul</h1>
+            <p class="lead my-3">Ce site est une vitrine de mon parcours, mes projets et mes expériences.</p>
+        </div>
+        <hr class="my-5" width="50%" style="margin: auto;">
+        <p class="lead">
+            <a href="{{ path('projects') }}" class="btn btn-primary btn-lg" role="button">
+                <i class="fas fa-info-circle"></i> 
+                En savoir plus
+            </a>
+        </p>
+    </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/yanni/OneDrive/DEV/COURS/symfony4/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/yanni/OneDrive/DEV/COURS/symfony4/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
