--- a/templates/admin/projects.html.twig
+++ b/templates/admin/projects.html.twig
@@ -3,5 +3,44 @@
 {% block title %}Login{% endblock %}
 
 {% block body %}
-    <p>Cette page est seulement visible par les administrateurs !</p>
+
+    <div class="container-fluid">
+        <h1 class="my-5 text-center">Projets</h1>
+        <div class="text-center mb-3">
+            <a href="#" class="btn btn-success text-white mb-3">
+                <i class="fas fa-plus"></i> 
+                Créer un nouveau projet
+            </a>
+        </div>
+        <table class="table table-hover">
+            <thead class="table-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Titre</th>
+                    <th>Introduction</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for project in projects %}
+                    <tr>
+                        <td>{{ project.id }}</td>
+                        <td>{{ project.title }}</td>
+                        <td>{{ project.introduction }}</td>
+                        <td>
+                            <a href="#" class="btn btn-warning">
+                                <i class="fas fa-edit"></i> 
+                                Éditer
+                            </a>
+                            <a href="#" class="btn btn-danger">
+                                <i class="fas fa-trash"></i> 
+                                Supprimer
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
 {% endblock %}
