--- a/templates/includes/nav.html.twig
+++ b/templates/includes/nav.html.twig
@@ -12,6 +12,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('contact') }}">Contact</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('admin_projects') }}">Admin projets</a>
+            </li>
         </ul>
         
         {% if app.user %}
