--- a/templates/projets/index.html.twig
+++ b/templates/projets/index.html.twig
@@ -15,6 +15,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">{{ project.title }}</h5>
+                    <small>Id du projet : {{ project.id }}</small>
                     <p class="card-text">{{ project.introduction }}</p>
                     <div class="projects-links d-flex justify-content-between">
                         <a href="{{ project.github }}" target="_blank" class="btn btn-outline-dark"><i class="fab fa-github"></i> GitHub</a>
