--- a/templates/admin/projects.html.twig
+++ b/templates/admin/projects.html.twig
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <h1 class="my-5 text-center">Projets</h1>
         <div class="text-center mb-3">
-            <a href="#" class="btn btn-success text-white mb-3">
+            <a href="{{ path('admin_projects_new') }}" class="btn btn-success text-white mb-3">
                 <i class="fas fa-plus"></i> 
                 Créer un nouveau projet
             </a>
@@ -28,11 +28,11 @@
                         <td>{{ project.title }}</td>
                         <td>{{ project.introduction }}</td>
                         <td>
-                            <a href="#" class="btn btn-warning">
+                            <a href="{{ path('admin_projects_edit', {'id': project.id}) }}" class="btn btn-warning">
                                 <i class="fas fa-edit"></i> 
                                 Éditer
                             </a>
-                            <a href="#" class="btn btn-danger">
+                            <a href="{{ path('admin_projects_delete', {'id': project.id}) }}" class="btn btn-danger">
                                 <i class="fas fa-trash"></i> 
                                 Supprimer
                             </a>
